tests/should_fail/bug/492.coma
module M_492__reborrow_tuple [#"492.rs" 6 0 6 52]
  let%span s4920 = "492.rs" 7 8 7 10
  let%span s4921 = "492.rs" 6 25 6 26
  let%span s4922 = "492.rs" 6 39 6 52
  let%span s4923 = "492.rs" 5 10 5 27
  let%span sresolve4 = "../../../creusot-contracts/src/resolve.rs" 54 20 54 34
  let%span sinvariant5 = "../../../creusot-contracts/src/invariant.rs" 35 20 35 44
  
  use creusot.prelude.MutBorrow
  
  type t_T'0
  
  predicate inv'0 (_1 : t_T'0)
  
  use creusot.int.UInt32
  
  predicate invariant'0 (self : MutBorrow.t t_T'0) =
    [%#sinvariant5] inv'0 self.current /\ inv'0 self.final
  
  predicate inv'1 (_1 : MutBorrow.t t_T'0)
  
  axiom inv_axiom'0 [@rewrite] : forall x : MutBorrow.t t_T'0 [inv'1 x] . inv'1 x = invariant'0 x
  
  predicate resolve'1 (self : MutBorrow.t t_T'0) =
    [%#sresolve4] self.final = self.current
  
  predicate resolve'0 (_1 : MutBorrow.t t_T'0) =
    resolve'1 _1
  
  use creusot.prelude.Any
  
  predicate inv'2 (_1 : (MutBorrow.t t_T'0, UInt32.t))
  
  axiom inv_axiom'1 [@rewrite] : forall x : (MutBorrow.t t_T'0, UInt32.t) [inv'2 x] . inv'2 x
  = (let (x0, x1) = x in inv'1 x0)
  
  meta "compute_max_steps" 1000000
  
  let rec reborrow_tuple'0[#"492.rs" 6 0 6 52] (x:MutBorrow.t t_T'0) (return'  (ret:(MutBorrow.t t_T'0, UInt32.t)))= {[@expl:reborrow_tuple 'x' type invariant] [%#s4921] inv'1 x}
    (! bb0
    [ bb0 = s0
      [ s0 = {inv'0 x.current}
        MutBorrow.borrow_final <t_T'0> {x.current} {MutBorrow.get_id x}
          (fun (_ret':MutBorrow.t t_T'0) ->
             [ &_3 <- _ret' ] 
            -{inv'0 _ret'.final}-
             [ &x <- { x with current = _ret'.final } ] 
            s1)
      | s1 =  [ &_0 <- (_3, ([%#s4920] (32 : UInt32.t))) ] s2
      | s2 = {[@expl:type invariant] inv'1 x} s3
      | s3 = -{resolve'0 x}- s4
      | s4 = return' {_0} ]
     ]
    )
    [ & _0 : (MutBorrow.t t_T'0, UInt32.t) = Any.any_l ()
    | & x : MutBorrow.t t_T'0 = x
    | & _3 : MutBorrow.t t_T'0 = Any.any_l () ]
    
    [ return' (result:(MutBorrow.t t_T'0, UInt32.t))-> {[@expl:reborrow_tuple result type invariant] [%#s4922] inv'2 result}
      {[@expl:reborrow_tuple ensures] [%#s4923] (let (a, _) = result in a).current = x.current}
      (! return' {result}) ]

end
module M_492__test [#"492.rs" 11 0 11 13]
  let%span s4920 = "492.rs" 12 16 12 17
  let%span s4921 = "492.rs" 14 18 14 30
  let%span s4922 = "492.rs" 15 11 15 13
  let%span s4923 = "492.rs" 10 10 10 15
  let%span s4924 = "492.rs" 6 25 6 26
  let%span s4925 = "492.rs" 6 39 6 52
  let%span s4926 = "492.rs" 5 10 5 27
  let%span sresolve7 = "../../../creusot-contracts/src/resolve.rs" 54 20 54 34
  
  use creusot.int.Int32
  
  use creusot.prelude.MutBorrow
  
  predicate inv'0 (_1 : MutBorrow.t Int32.t)
  
  axiom inv_axiom'0 [@rewrite] : forall x : MutBorrow.t Int32.t [inv'0 x] . inv'0 x = true
  
  use creusot.int.UInt32
  
  predicate inv'1 (_1 : (MutBorrow.t Int32.t, UInt32.t))
  
  axiom inv_axiom'1 [@rewrite] : forall x : (MutBorrow.t Int32.t, UInt32.t) [inv'1 x] . inv'1 x = true
  
  let rec reborrow_tuple'0 (x:MutBorrow.t Int32.t) (return'  (ret:(MutBorrow.t Int32.t, UInt32.t)))= {[@expl:reborrow_tuple 'x' type invariant] [%#s4924] inv'0 x}
    any
    [ return' (result:(MutBorrow.t Int32.t, UInt32.t))-> {[%#s4925] inv'1 result}
      {[%#s4926] (let (a, _) = result in a).current = x.current}
      (! return' {result}) ]
  
  
  predicate resolve'1 (self : MutBorrow.t Int32.t) =
    [%#sresolve7] self.final = self.current
  
  predicate resolve'0 (_1 : MutBorrow.t Int32.t) =
    resolve'1 _1
  
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  let rec test'0[#"492.rs" 11 0 11 13] (_1:()) (return'  (ret:()))= (! bb0
    [ bb0 = s0
      [ s0 =  [ &x <- [%#s4920] (5 : Int32.t) ] s1
      | s1 = MutBorrow.borrow_mut <Int32.t> {x}
          (fun (_ret':MutBorrow.t Int32.t) ->  [ &_6 <- _ret' ]  [ &x <- _ret'.final ] s2)
      | s2 = MutBorrow.borrow_final <Int32.t> {_6.current} {MutBorrow.get_id _6}
          (fun (_ret':MutBorrow.t Int32.t) ->  [ &_5 <- _ret' ]  [ &_6 <- { _6 with current = _ret'.final } ] s3)
      | s3 = reborrow_tuple'0 {_5} (fun (_ret':(MutBorrow.t Int32.t, UInt32.t)) ->  [ &_4 <- _ret' ] s4)
      | s4 = bb1 ]
    
    | bb1 = s0
      [ s0 =  [ &res <- let (r'0, _) = _4 in r'0 ] s1
      | s1 = -{resolve'0 _6}- s2
      | s2 = {[@expl:assertion] [%#s4921] res.final = (5 : Int32.t)} s3
      | s3 =  [ &res <- { res with current = ([%#s4922] (10 : Int32.t)) } ] s4
      | s4 = -{resolve'0 res}- s5
      | s5 = return' {_0} ]
     ]
    )
    [ & _0 : () = Any.any_l ()
    | & x : Int32.t = Any.any_l ()
    | & res : MutBorrow.t Int32.t = Any.any_l ()
    | & _4 : (MutBorrow.t Int32.t, UInt32.t) = Any.any_l ()
    | & _5 : MutBorrow.t Int32.t = Any.any_l ()
    | & _6 : MutBorrow.t Int32.t = Any.any_l () ]
     [ return' (result:())-> {[@expl:test ensures] [%#s4923] false} (! return' {result}) ] 
end
